# ============================================================================
# GATEWAY DATABASE
# SQLite connection pool and schema management for the AgentZero gateway
# ============================================================================

[package]
name = "gateway-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SQLite connection pool and schema for the AgentZero gateway"

[dependencies]
# Internal crates (for DbProvider trait impls)
api-logs = { path = "../../services/api-logs" }
execution-state = { path = "../../services/execution-state" }
agent-runtime = { path = "../../runtime/agent-runtime" }
gateway-services = { path = "../gateway-services" }
zero-core = { path = "../../framework/zero-core" }
zero-stores-traits = { path = "../../stores/zero-stores-traits" }
zero-stores-domain = { path = "../../stores/zero-stores-domain" }

# Database
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
sqlite-vec = "0.1"
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Async
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
